--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,12 @@ body {
 	/*margin-bottom: 10px;*/
 	padding-bottom: 10px;
 }
+
+a {
+	text-decoration: none !important;
+}
+
+a {color:#FF0000;}      /* unvisited link */
+a:visited {color:#00FF00;}  /* visited link */
+a:hover {color:#FF00FF;}  /* mouse over link */
+a:active {color:#0000FF;}  /* selected link */
