--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,18 @@ body {
 }
 
 #blog_container {
-	margin: 20px;
+	margin-left: 20px;
 	width: 80%;
 	height: 100%;
 	overflow: scroll;
 	/*border: 1px solid red;*/
 	/*background: red;*/
 
+}
+
+p {
+	padding: 0;
+	margin: 0;
 }
 
 ::-webkit-scrollbar { 
@@ -74,3 +79,7 @@ a {color:#FF0000;}      /* unvisited link */
 a:visited {color:#00FF00;}  /* visited link */
 a:hover {color:#FF00FF;}  /* mouse over link */
 a:active {color:#0000FF;}  /* selected link */
+
+.searchBox {
+	border: 0px none;
+}
