--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body, html {
 body {
 	width: 100%;
 	height: 100%;
-	/*background: aqua;*/
 	margin: 0px;
 	padding: 0;
 	font-family: "PT Sans", Helvetica, Arial, sans-serif;
@@ -45,14 +44,18 @@ body {
 	width: 80%;
 	height: 100%;
 	overflow: scroll;
-	/*border: 1px solid red;*/
-	/*background: red;*/
 
 }
 
 p {
 	padding: 0;
 	margin: 0;
+}
+
+#about_container h1 {
+	padding: 0;
+	margin: 0;
+	color: white;
 }
 
 ::-webkit-scrollbar { 
