--- a/css/login.css
+++ b/css/login.css
@@ -7,7 +7,7 @@ body {
 #form-container {
     border: 1px solid grey;
     width: 360px;
-    height: 150px;
+    height: 180px;
     position: absolute;
     margin: auto;
     top:0;
@@ -25,4 +25,15 @@ input[type="text"], input[type="password"] {
     width: 200px;
     height: 30px; 
     
+}
+
+input[type="submit"] {
+    float: right;
+    clear: both;
+    border: 2px solid aquamarine;
+    padding: 5px 10px !important;
+    font-size: 14px !important;
+    background-color: aquamarine;
+    font-weight: bold;
+    color: darkgray;
 }
