--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,20 @@
 body {
-    background-image: url("../images/image.jpg");
+    background-image: url("../images/brick-wall.jpg");
     font-family: "PT Sans", Helvetica, Arial, sans-serif;
     color: azure;
+}
+
+#title {
+    width: 460px;
+    height: 50px;
+    position: relative;
+    margin: auto;
+    top:100px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    text-align: center;
+    font-size: 50px;
 }
 
 #form-container {
@@ -19,6 +32,10 @@ body {
 
 p {
     text-align: center;
+}
+
+label {
+    float: right;   
 }
 
 input[type="text"], input[type="password"] {
