--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ a {
 
 a {color:white;}      /* unvisited link */
 a:visited {color:white;}  /* visited link */
-a:hover {color:white;}  /* mouse over link */
-a:active {color:white;}  /* selected link */
+a:hover {color:#E05151; cursor: pointer;}  /* mouse over link */
+a:active {color:#E05151;}  /* selected link */
 
 .searchBox {
 	border: 0px none;
@@ -107,10 +107,11 @@ a:active {color:white;}  /* selected link */
 
 input[type="submit"].logoutButton {
     width: 100%;
-    border: 2px solid aquamarine;
+    border: 2px solid #E05151;
     padding: 5px 10px !important;
     font-size: 14px !important;
-    background-color: aquamarine;
+    background-color: #E05151;
     font-weight: bold;
-    color: darkgray;   
+    color: #333333;  
+    cursor: pointer;
 }
