do for buttons on the add post page as well - previous changes

--- a/css/addEntry.css
+++ b/css/addEntry.css
@@ -29,11 +29,12 @@ textarea.blogpost {
 }
 
 input[type="submit"].submit-btn, input[type="reset"].reset-btn {
-    border: 2px solid aquamarine;
+    border: 2px solid #E05151;
     padding: 5px 10px !important;
     font-size: 14px !important;
-    background-color: aquamarine;
+    background-color: #E05151;
     font-weight: bold;
-    color: darkgray;   
+    color: #333333;   
+    cursor: pointer;  
     margin-left: 5px; /* put some space between the buttons */
 }
